SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Introduced Java 23 compatibility.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/47
  Table cell data popup dialog: XML/Json Reformatting now works for binary/BLOB data.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/46
  SQL result and table export to MS-Excel files: New options to make exported sheets
  auto filtered and to choose if header rows are bold, centered and/or frozen.
  Note: Export to MS-Excel files and other formats is available through the right mouse menu of tables.
  The SQL editor allows to export SQL results through the right mouse menu and tools popup (ctrl+t).

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/45
  Table cell data popup dialog now offers a toggle button to pin the dialog.
  When pinned any further cell data will be displayed in the pinned dialog.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/44
  SQL result table: Numeric values can now be right aligned,
  see menu File --> Global Preferences tab Data Types --> section "General"

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/43
  The maximum number of characters to display in the table cell data popup can now be configured.
  See menu File -- > Global Preferences --> tab General --> section "Table cell data value popup".

#617 | https://github.com/squirrel-sql-client/squirrel-sql-code/issues/41
  SQL result table: The detail data display now allows to automatically reformat XML or Json data.
  To configure automatic reformatting go to menu File --> Global preferences
  --> tab "Data type controls" --> section General
  Note: For detail data display double click a table cell or switch on cell detail display.