@@ -12,3 +12,5 @@ TextFindCtrl.last.occurrence.reached=Last occurrence reached. Next search will r
 TextFindMode.contains=Contains
 TextFindMode.contains.ignore.case=Contains ignore case
 TextFindMode.contains.regexp=Contains regular expression
+
+TextFindCtrl.mark.count=Marked {0} occurrences
